[package]
name = "tencentcloud"
version = "0.1.0"
edition = "2021"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
license = "MIT"
repository = "https://github.com/Sherlock-Holo/tencentcloud"
description = "tencentcloud rust generic sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }
reqwest = { version = "0.11", features = ["json", "socks"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
